==> zharijs/SmartEVSE-2/SmartEVSE2.X/GLCD.c <==
#include <xc.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "EVSE.h"
#include "GLCD.h"
#include "utils.h"
#include "font5x8.c"

void st7565_command(unsigned char data) {
    _A0_0;
    PIR1bits.SSP1IF = 0;                                                        // clear flag
    SSP1BUF = data;                                                             // and send SPI data
    while (!PIR1bits.SSP1IF);                                                   // wait for bit to become set
}

void st7565_data(unsigned char data) {
    _A0_1;
    PIR1bits.SSP1IF = 0;                                                        // clear flag
    SSP1BUF = data;                                                             // and send SPI data
    while (!PIR1bits.SSP1IF);                                                   // wait for bit to become set
}

void GLCDMenu(unsigned char Buttons) {
    static unsigned long ButtonTimer = 0;
    static unsigned char ButtonRelease = 0;                                     // keeps track of LCD Menu Navigation
    static unsigned int CT1, value, ButtonRepeat = 0;
    unsigned char Str[10];

    unsigned char MenuItemsCount = getMenuItems();

    // Main Menu Navigation
    BacklightTimer = BACKLIGHT;                                                 // delay before LCD backlight turns off.
    BACKLIGHT_ON;                                                               // LCD backlight on

    if (RCmon == 1 && (Error & RCD_TRIPPED) && PORTBbits.RB1 == 0) {            // RCD was tripped, but RCD level is back to normal
        Error &= ~RCD_TRIPPED;                                                  // Clear RCD error bit, by pressing any button
    }

    if ((LCDNav == 0) && (Buttons == 0x5) && (ButtonRelease == 0)) {            // Button 2 pressed ?
        LCDNav = MENU_ENTER;                                                    // about to enter menu
        ButtonTimer = Timer;
    } else if (LCDNav == MENU_ENTER && ((ButtonTimer + 2000) < Timer)) {        // <CONFIG>
        LCDNav = MENU_CONFIG;                                                   // Main Menu entered
        ButtonRelease = 1;
    } else if ((LCDNav == MENU_ENTER) && (Buttons == 0x7)) {                    // Button 2 released before entering menu?
        LCDNav = 0;
        ButtonRelease = 0;
        GLCD();
    } else if ((LCDNav == MENU_CAL) && (Buttons == 0x2) &&  SubMenu ) {         // Buttons 1> and 3< pressed ?
        ICal = ICAL;                                                            // reset Calibration value
        SubMenu = 0;                                                            // Exit Submenu
        ButtonRelease = 1;
    } else if ((LCDNav > 1) && (Buttons == 0x2 || Buttons == 0x3 || Buttons == 0x6)) { // Buttons < or > or both pressed
        if (ButtonRelease == 0) {                                               // We are navigating between sub menu options
            if (SubMenu) {
                switch (LCDNav) {
                    case MENU_CAL:
                        CT1 = MenuNavInt(Buttons, CT1, 100, 999);
                        break;
                    case MENU_EVMETER:                                          // do not display the Sensorbox here
                        value = getItemValue(LCDNav);
                        do {
                            value = MenuNavInt(Buttons, value, MenuStr[LCDNav].Min, MenuStr[LCDNav].Max);
                        } while (value == EM_SENSORBOX);
                        setItemValue(LCDNav, value);
                        break;
                    default:
                        value = getItemValue(LCDNav);
                        value = MenuNavInt(Buttons, value, MenuStr[LCDNav].Min, MenuStr[LCDNav].Max);
                        setItemValue(LCDNav, value);
                        break;
                }
            } else {
                LCDNav = MenuNavCharArray(Buttons, LCDNav, MenuItems, MenuItemsCount);
            }
            ButtonRelease = 1;
        // Repeat button after 0.5 second
        } else if (ButtonRelease == 2 && ButtonRepeat == 0) {
            ButtonRepeat = 500;
            ButtonTimer = Timer + ButtonRepeat;
        } else if (ButtonRepeat && Timer > ButtonTimer) {
            ButtonRelease = 0;
            if (ButtonRepeat > 1) {
                ButtonRepeat -= (ButtonRepeat / 8);
                ButtonTimer = Timer + ButtonRepeat;
            }
        }
    } else if (LCDNav > 1 && Buttons == 0x5 && ButtonRelease == 0) {            // Button 2 pressed?
        ButtonRelease = 1;
        if (SubMenu) {                                                          // We are currently in Submenu
            SubMenu = 0;                                                        // Exit Submenu now
            if (LCDNav == MENU_CAL) {                                           // Exit CT1 calibration?
                ICal = ((unsigned long)CT1 * 10 + 5) * ICAL / Iuncal;           // Calculate new Calibration value
                Irms[0] = CT1;                                                  // Set the Irms value, so the LCD update is instant
            }
        } else {                                                                // We are currently not in Submenu.
            SubMenu = 1;                                                        // Enter Submenu now
            if (LCDNav == MENU_CAL) {                                           // CT1 calibration start
                CT1 = (unsigned int) abs(Irms[0]);                              // make working copy of CT1 value
            } else if (LCDNav == MENU_EXIT) {                                   // Exit Main Menu
                LCDNav = 0;
                SubMenu = 0;
                Error = NO_ERROR;                                               // Clear All Errors when exiting the Main Menu
                TestState = 0;                                                  // Clear TestState
                ChargeDelay = 0;                                                // Clear ChargeDelay
                setSolarStopTimer(0);                                           // Disable Solar Timer
                GLCD();
                write_settings();                                               // Write to eeprom
                ButtonRelease = 2;                                              // Skip updating of the LCD 
            }
        }

    } else if (Buttons == 0x7) {                                                // Buttons released
        ButtonRelease = 0;
        ButtonRepeat = 0;
        delay(10);                                                              // debounce keys (blocking)
    }

    //
    // here we update the LCD
    //
    if ( ButtonRelease == 1 || LCDNav == 1) {
        if (LCDNav == 1) {
            glcd_clrln(0, 0x00);
            glcd_clrln(1, 0x04);                                                // horizontal line
            GLCD_print_buf2(2, (const char *) "Hold 2 sec");
            GLCD_print_buf2(4, (const char *) "for Menu");
            glcd_clrln(6, 0x10);                                                // horizontal line
            glcd_clrln(7, 0x00);

        } else {
            GLCD_print_menu(2, MenuStr[LCDNav].LCD);                            // add navigation arrows on both sides
            switch (LCDNav) {
                case MENU_CAL:
                    if (SubMenu) {
                        sprintf(Str, "%u.%uA", CT1 / 10, CT1 % 10);
                    } else {
                        sprintf(Str, "%u.%uA",((unsigned int) abs(Irms[0]) / 10), ((unsigned int) abs(Irms[0]) % 10) );
                    }
                    GLCD_print_menu(4, Str);
                    break;
                default:
                    GLCD_print_menu(4, getMenuItemOption(LCDNav));              // print Menu
                    break;
            }

            // Bottom row of the GLCD
            GLCD_buffer_clr();
            sprintf(Str, "%i%cC", TempEVSE, 0x0C);                              // ° Degree symbol
            GLCD_write_buf_str(6, 0, Str, GLCD_ALIGN_LEFT);                     // show the internal temperature
            sprintf(Str, "%u/%u", GetPosInMenu(MenuItemsCount), MenuItemsCount);
            GLCD_write_buf_str(64, 0, Str, GLCD_ALIGN_CENTER);                  // show navigation position in the menu
            GLCD_write_buf_str(122, 0, (const char *) "v"VERSION, GLCD_ALIGN_RIGHT);// show software version in bottom right corner.
            GLCD_sendbuf(7, 1);
        }
        ButtonRelease = 2;                                                      // Set value to 2, so that LCD will be updated only once
    }

    ScrollTimer = Timer;                                                        // reset timer for HelpMenu text
    LCDpos = 0;                                                                 // reset position of scrolling text
    OldButtonState = Buttons;
    LCDTimer = 0;
}

void GLCD_init(void) {
    delay(200);                                                                 // transients on the line could have garbled the LCD, wait 200ms then re-init. (blocking)
    _A0_0;                                                                      // A0=0
    _RSTB_0;                                                                    // Reset GLCD module
    __delay_us(10);
    _RSTB_1;                                                                    // Reset line high
    __delay_us(10);

//Write_Instruction(0xa0)
//Write_Instruction(0xc8)
//Write_Instruction(0xa2)
//Write_Instruction((0x28|0x07))
//Write_Instruction((0x20|0x06))
//Write_Instruction(0x81);
//	Write_Instruction(0x16);
//Write_Instruction(0x40)
//Write_Instruction(0xaf)
/*/    
    st7565_command(0xA0);
    st7565_command(0xC8);
    st7565_command(0xA2);
    st7565_command(0x28|0x07);
    st7565_command(0x20|0x06);
    st7565_command(0x81);
    st7565_command(0x16);
    st7565_command(0x40);
    goto_row(0x00);                                                             // Set page address
    goto_col(0x00);                                                             // Set column addr LSB
    st7565_command(0xAF);
  /*/
      
    st7565_command(0xA2);                                                       // set bias at duty cycle 1.65 (0xA2=1.9 0xA3=1.6)
    st7565_command(0xC8);                                                       // comm direction normal =0xC0 comm reverse= 0xC8
    st7565_command(0xA0);                                                       // seg dir (0xA0 or 0xA1)
    st7565_command(0xA6);                                                       // set inverse (0xA7=inverse 0xA6=normal)

    st7565_command(0x20 | 0x04);                                                // set Regulation Ratio (0-7)

    st7565_command(0xF8);                                                       // send Booster command
    st7565_command(0x01);                                                       // set Booster value 00=4x 01=5x

    st7565_command(0x81);                                                       // send Electronic Volume command 0x81
    st7565_command(0x24);                                                       // set Electronic volume (0x00-0x3f)

    st7565_command(0x28 | 0x07);                                                // ALL Power Control ON
    st7565_command(0x40);                                                       // Set display start line

    goto_row(0x00);                                                             // Set page address
    goto_col(0x00);                                                             // Set column addr LSB
    st7565_command(0xAF);                                                       // ON command
//
    
    
    
    
    
}
