==> thebatundertaken/SmartEVSE-3/SmartEVSE-3-scf/src/glcd.cpp <==
#include "glcd.h"
#include <Arduino.h>
#include <SPI.h>
#include <WiFi.h>
#include <string.h>
#include "EVSECluster.h"
#include "EVSEController.h"
#include "EVSEMenu.h"
#include "EVSEPin.h"
#include "EVSERFID.h"
#include "EVSEScreen.h"
#include "EVSEWifi.h"
#include "font.cpp"
#include "font2.cpp"
#include "i18n.h"
#include "main.h"
#include "utils.h"
#define _A0_0 digitalWrite(PIN_LCD_A0_B2, LOW);
#define _A0_1 digitalWrite(PIN_LCD_A0_B2, HIGH);
#define _RSTB_0 digitalWrite(PIN_LCD_RST, LOW);
#define _RSTB_1 digitalWrite(PIN_LCD_RST, HIGH);

void st7565_command(unsigned char data) {
    _A0_0;
    SPI.transfer(data);
}

void st7565_data(unsigned char data) {
    _A0_1;
    SPI.transfer(data);
}

void GLCDMenu() {
    // add navigation arrows on both sides
    GLCD_print_menu(2, menuEntries[evseMenu.currentMenuOption].LCD);

    uint8_t wifimode = evseWifi.getWifiMode();
    // When connected to Wifi, display IP and time in top row
    if (wifimode == WIFI_MODE_ENABLED) {
        GLCDWifiInfo();
    }

    switch (evseMenu.currentMenuOption) {
        case MENU_WIFI:
            if (evseMenu.subMenu && wifimode == WIFI_MODE_DISABLED) {
                // Clear Wifi info from top row of the GLCD
                glcd_clrln(0, 0);
            } else if (evseMenu.subMenu && wifimode == WIFI_MODE_START_PORTAL) {
                if (evseWifi.isPortalReady()) {
                    GLCDAccessPoint();
                } else {
                    GLCDWifiPortalCountdown();
                }
            }

            GLCD_print_menu(4, evseMenu.getMenuItemi18nText(evseMenu.currentMenuOption));

            break;

        case MENU_RFIDREADER:
            if (evseMenu.subMenu) {
                GLCDRFID();
            } else {
                GLCD_print_menu(4, evseMenu.getMenuItemi18nText(evseMenu.currentMenuOption));
            }
            break;

        default:
            // print Menu
            GLCD_print_menu(4, evseMenu.getMenuItemi18nText(evseMenu.currentMenuOption));
            break;
    }

    // Bottom row of the GLCD
    GLCD_buffer_clr();
    // show the internal temperature. ° Degree symbol
    sprintf(LCDStr, I18N_TEMPERATURE_FORMAT, evseController.temperature, 0x0C);
    GLCD_write_buf_str(6, 0, LCDStr, GLCD_ALIGN_LEFT);

    // show navigation position in the menu
    sprintf(LCDStr, I18N_MENUNAVIGATIONPOSITION_FORMAT, evseMenu.getPosInMenu(), evseMenu.getMenuItemsCount());
    GLCD_write_buf_str(64, 0, LCDStr, GLCD_ALIGN_CENTER);

    // show software version in bottom right corner
    sprintf(LCDStr, I18N_SOFTWAREVERSION_FORMAT, (const char*)EVSE_VERSION);
    GLCD_write_buf_str(122, 0, LCDStr, GLCD_ALIGN_RIGHT);
    GLCD_sendbuf(7, 1);
}

void GLCD_init() {
    delay(200);  // transients on the line could have garbled the LCD, wait 200ms
                 // then re-init.
    _A0_0;       // A0=0
    _RSTB_0;     // Reset GLCD module
    delayMicroseconds(4);
    _RSTB_1;  // Reset line high
    delayMicroseconds(4);

    st7565_command(0xA2);  // (11) set bias at duty cycle 1.65 (0xA2=1.9 0xA3=1.6)
    st7565_command(0xA0);  // (8) SEG direction (0xA0 or 0xA1)
    st7565_command(0xC8);  // (15) comm direction normal =0xC0 comm reverse= 0xC8

    st7565_command(0x20 | 0x04);  // (17) set Regulation Ratio (0-7)

    st7565_command(0xF8);  // (19) send Booster command
    st7565_command(0x01);  // set Booster value 00=4x 01=5x

    st7565_command(0x81);  // (18) send Electronic Volume command 0x81
    st7565_command(0x24);  // set Electronic volume (0x00-0x3f)

    st7565_command(0xA6);  // (9) Inverse display (0xA7=inverse 0xA6=normal)
    st7565_command(0xA4);  // (10) ALL pixel on (A4=normal, A5=all ON)

    st7565_command(0x28 | 0x07);  // (16) ALL Power Control ON

    glcd_clear();    // clear internal GLCD buffer
    goto_row(0x00);  // (3) Set page address
    goto_col(0x00);  // (4) Set column addr LSB

    st7565_command(0xAF);  // (1) ON command
}
